src/test/deca/context/invalid/renduInter02/02minus_incompatible_type.deca
// Description:
//      Opérateur moins incorrect au niveau du typage
//      => l'opérateur moins est uniquement applicable sur un entier ou un réel
//
// Resultats:
//      Erreur contextuelle
//      Ligne 10 : Type string incompatible avec l'opérateur moins

{
    int x = 7 - "hello";
    println("x=", x);
}